--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,11 @@ jobs:
         working-directory: api
         run: pytest
 
+  api:
+    runs-on: ubuntu-latest
+    needs: build-test
+
+    steps:
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
